Favicons, ready for domain upload, fixed laggy scroll

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://mayaandkeshal.com" />
   <meta property="og:description" content="The wedding of Maya and Keshal" />
-  <meta property="og:image" content="http://pritakpatel.com/images/open-graph-thumbnail.png" />
+  <meta property="og:image" content="http://mayaandkeshal.com/images/open-graph-thumbnail.jpg" />
   <meta property="fb:admins" content="prit4k" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -18,16 +18,13 @@
   <meta name="keywords" content="Wedding, Indian, Sri Lanka, India, Marriage, Wife, Husband">
   <meta name="author" content="Pritak Patel">
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Playfair+Display" rel="stylesheet">
-
   <!--[htmlclean-protect]-->
   <!-- inject:css -->
   <!-- endinject -->
   <!--[/htmlclean-protect]-->
   <!--<Deject>-->
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/fonts/fonts.css">
-  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/fonts.css">
   <!--</Deject>-->
 </head>
 
@@ -165,7 +162,7 @@
           <br>
           <img src="images/proposal-2.gif" alt="proposal-2" width="100%">
         </div>
-        <p class="is-hidden-tablet" style="line-height:0px;margin:-65px;">
+        <p class="is-hidden-tablet" style="line-height:0px;margin:-73px;">
             <br>
           </p>
         <div id="couple-7" class="column column-couple-text is-4 is-offset-2">
