responsive backgrounds, map added

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <meta name="keywords" content="Wedding, Indian, Sri Lanka, India, Marriage, Wife, Husband">
   <meta name="author" content="Pritak Patel">
 
-  
+
   <!--[htmlclean-protect]-->
   <!-- inject:css -->
   <!-- endinject -->
@@ -26,6 +26,7 @@
   <!--<Deject>-->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/fonts.css">
+  <link rel="stylesheet" href="css/animate.css">
   <!--</Deject>-->
 </head>
 
@@ -65,8 +66,8 @@
     </div>
   </nav>
 
-  <section id="main" class="hero main is-large">
-      <img src="images/c-3-color.jpg" alt="main" width="100%;">
+  <section id="main" class="hero main is-large animated zoomIn">
+    <img src="images/c-3-color.jpg" alt="main" width="100%;">
   </section>
   <!-- <center>
       <span class="main-footer">December 17th - 18th &middot; Kalutara, Sri Lanka</span>
@@ -147,8 +148,8 @@
         </div>
         <img class="is-hidden-tablet" src="images/c-6.jpg" alt="c-6" width="100%">
         <p class="is-hidden-tablet" style="line-height:0px;margin:-35px;">
-            <br>
-          </p>
+          <br>
+        </p>
         <div id="couple-5" class="column column-couple-text is-4">
           <p> After college, Maya moved back to India. Keshal stayed in NYC. They did looooong distance for 2 loooong years.
             That was hard. But they saw each other once a year on trips they took together to Spain, Croatia and Serbia.
@@ -164,8 +165,8 @@
           <img src="images/proposal-2.gif" alt="proposal-2" width="100%">
         </div>
         <p class="is-hidden-tablet" style="line-height:0px;margin:-73px;">
-            <br>
-          </p>
+          <br>
+        </p>
         <div id="couple-7" class="column column-couple-text is-4 is-offset-2">
           <p> In February, 2017, Keshal moved to Boston, putting an end to 5 years of long distance. Now, Sundays mean fresh
             brewed coffee, decadent homemade breakfasts and Otis Redding on the record player. </br>
@@ -177,8 +178,8 @@
         </div>
         <img class="is-hidden-tablet" src="images/proposal-2.gif" alt="proposal-2" width="100%">
         <p class="is-hidden-tablet" style="line-height:0px;margin:-35px;">
-            <br>
-          </p>
+          <br>
+        </p>
         <div id="couple-8" class="column column-couple-text is-4">
           <p> The two have since built a life together with all the trappings of millennial domesticity - a Slack channel where
             they decide what to make for dinner on weeknights, a cast iron pan that Keshal lovingly seasons, and a plant
@@ -187,8 +188,7 @@
             <br/>
           </p>
           <strong class="is-size-5 is-hidden-tablet">
-            <br>
-              That's just the first few chapters of the story, folks. Join them in Kalutara for the next!
+            <br> That's just the first few chapters of the story, folks. Join them in Kalutara for the next!
           </strong>
         </div>
         <div id="couple-9" class="column is-8 is-offset-2 is-hidden-mobile">
@@ -206,8 +206,8 @@
       <br class="is-hidden-mobile">
       <br class="is-hidden-mobile">
       <p class="is-hidden-tablet" style="line-height:0px;margin:-40px;">
-          <br>
-        </p>
+        <br>
+      </p>
     </div>
   </section>
 
@@ -263,8 +263,7 @@
         </div>
         <div id="schedule-2" class="column is-5">
           <div id="schedule-1" class="date is-hidden-tablet">
-            <br>
-            Tuesday, December 18th
+            <br> Tuesday, December 18th
             <br>
             <br>
           </div>
@@ -278,12 +277,12 @@
           </p>
           <a class="button is-small is-primary is-inverted is-outlined is-static">Anantara Lobby</a>
           <p class="is-hidden-mobile is-hidden-widescreen" style="line-height:0px;margin:-12px;">
-              <br>
-            </p>
+            <br>
+          </p>
           <a class="button is-small is-primary is-inverted is-outlined is-static is-hidden-mobile">Traditional Indian attire (but remember, it'll be hot!)</a>
           <a class="button is-small is-primary is-inverted is-outlined is-static is-hidden-tablet">Traditional Indian attire</a>
-  
-        </br>
+
+          </br>
           </br>
           <span class="event-name">
             Pheras &middot; 4:30pm </br>
@@ -294,8 +293,8 @@
           </p>
           <a class="button is-small is-primary is-inverted is-outlined is-static">The Jetty</a>
           <p class="is-hidden-mobile is-hidden-widescreen" style="line-height:0px;margin:-12px;">
-              <br>
-            </p>
+            <br>
+          </p>
           <a class="button is-small is-primary is-inverted is-outlined is-static is-hidden-mobile">Traditional Indian attire (baraat outfit)</a>
           <a class="button is-small is-primary is-inverted is-outlined is-static is-hidden-tablet">Traditional Indian attire</a>
           </br>
@@ -339,8 +338,8 @@
           </p>
           <a class="button is-small is-primary is-inverted is-outlined is-static">Olu Restaurant</a>
           <p class="is-hidden-mobile is-hidden-widescreen" style="line-height:0px;margin:-12px;">
-              <br>
-            </p>
+            <br>
+          </p>
           <a class="button is-small is-primary is-inverted is-outlined is-static is-hidden-mobile">PJs, reception attire, anything really</a>
           <a class="button is-small is-primary is-inverted is-outlined is-static is-hidden-tablet">PJs, beach attire, anything</a>
         </div>
@@ -377,6 +376,11 @@
                 and an ocean on the other. The resort has beach access as well as 2 pools.</quote>
             </div>
           </article>
+          <div class="map-responsive">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.6488992788904!2d79.96050075073612!3d6.565923124466073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2372a43a9e44b%3A0xaaad6c7857ea1246!2sAnantara+Kalutara+Resort!5e0!3m2!1sen!2sus!4v1521616060148"
+              width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+          </br>
           <strong> Booking Rooms</strong>
           </br>
           For those of you wondering how to book a room, fear not, our wedding planners (hi, Janice & team!) will get in touch via
@@ -399,6 +403,11 @@
                 and an ocean on the other. The resort has beach access as well as 2 pools.</quote>
             </div>
           </article>
+          <div class="map-responsive">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.6488992788904!2d79.96050075073612!3d6.565923124466073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2372a43a9e44b%3A0xaaad6c7857ea1246!2sAnantara+Kalutara+Resort!5e0!3m2!1sen!2sus!4v1521616060148"
+              width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+          </br>
           <strong> Booking Rooms</strong>
           </br>
           For those of you wondering how to book a room, fear not, our wedding planners (hi, Janice & team!) will get in touch via
@@ -427,11 +436,11 @@
           <br>
           <br>
           <article class="message is-dark">
-              <div class="message-body">
-                <quote>If you're arriving on the 16th or 17th, or leaving for the airport on the 19th, we will be providing transportation
-                  to/from the airport.</quote>
-              </div>
-            </article>
+            <div class="message-body">
+              <quote>If you're arriving on the 16th or 17th, or leaving for the airport on the 19th, we will be providing transportation
+                to/from the airport.</quote>
+            </div>
+          </article>
           <strong> Local SIM Cards</strong>
           </br>
           The resort has WiFi but if you would like to get a local SIM card, you can do so at the airport. The rates are very reasonable
@@ -450,13 +459,14 @@
           Fly into Bandaranaike International Airport (CMB) - Kalutara is about 1.5 hours away by road. If you plan to arrive before
           the 16th or leave after the 19th, see our FAQ section for vetted transportation providers you can use to hire a
           car and driver. You can also hire them to travel around Sri Lanka.
-          <br><br>
+          <br>
+          <br>
           <article class="message is-dark">
-              <div class="message-body">
-                <quote>If you're arriving on the 16th or 17th, or leaving for the airport on the 19th, we will be providing transportation
-                  to/from the airport.</quote>
-              </div>
-            </article>
+            <div class="message-body">
+              <quote>If you're arriving on the 16th or 17th, or leaving for the airport on the 19th, we will be providing transportation
+                to/from the airport.</quote>
+            </div>
+          </article>
           <strong> Local SIM Cards</strong>
           </br>
           The resort has WiFi but if you would like to get a local SIM card, you can do so at the airport. The rates are very reasonable
@@ -498,26 +508,26 @@
         </div>
       </div>
       <div class="columns">
-          <div class="column is-12 is-hidden-desktop is-hidden-mobile">
-            <strong class="upper-subtitle">Drop us a note by 05.20</strong>
-            <h1 class="is-size-3">
-              <strong class="underline">say you'll be there</strong>
-            </h1>
-            </br>
-            </br>
-  
-            <div class="field has-addons">
-              <div class="control is-expanded">
-                <input class="input is-medium" type="text" placeholder="Enter the email on your invite">
-              </div>
-              <div class="control">
-                <a class="button is-medium is-link">
-                  &#9758;
-                </a>
-              </div>
+        <div class="column is-12 is-hidden-desktop is-hidden-mobile">
+          <strong class="upper-subtitle">Drop us a note by 05.20</strong>
+          <h1 class="is-size-3">
+            <strong class="underline">say you'll be there</strong>
+          </h1>
+          </br>
+          </br>
+
+          <div class="field has-addons">
+            <div class="control is-expanded">
+              <input class="input is-medium" type="text" placeholder="Enter the email on your invite">
+            </div>
+            <div class="control">
+              <a class="button is-medium is-link">
+                &#9758;
+              </a>
             </div>
           </div>
         </div>
+      </div>
   </section>
 
   <section id="faq" class="hero section faq is-black">
@@ -584,19 +594,15 @@
             </br>
             <strong class="footer-text">Designed & developed with &hearts; by Pritak </strong>
           </div>
+          <div class="content has-text-centered is-hidden-mobile">
+            </br>
+            </br>
+            </br>
+            <span class="heart">&hearts;</br>
+            </span>
+            <strong class="footer-text">Designed & developed with love by Pritak </strong>
+          </div>
   </section>
-
-
-
-  <footer class="footer is-hidden-mobile">
-    <div class="container">
-      <div class="content has-text-centered">
-        <span class="heart">&hearts;</br>
-        </span>
-        <strong class="footer-text">Designed & developed with love by Pritak </strong>
-      </div>
-    </div>
-  </footer>
 
   <!--<Deject>-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
