bug fixes, slight modifications

--- a/src/couple.html
+++ b/src/couple.html
@@ -68,44 +68,46 @@
 
   <section id="the-couple" class="hero quiz section is-fullheight">
     <div class="hero-body">
-      <div class="columns is-multiline">
-        <div id="couple-20" class="column is-4 is-offset-1">
-          <p class="title is-2 ">
-            <span class="rsvp-label">Take the Quiz</span>
-          </p>
-          <p class="subtitle is-4">We could tell you our story...
-            <br>or we could see how well you know it!</p>
-        </div>
-        <div id="couple-2" class="column is-6">
-          <div class="box box-outer">
-            <div id="question" class="field">
-              <strong>Question 1/9</strong>
-              <label id="real-question" class="label is-size-5">Where did Maya and Keshal meet? </label>
-            </div>
-            <progress id="progress" class="progress is-link is-small" value="0" max="100">0%</progress>
-            <div class="field">
-              <p id="a5" class="control"></p>
-              <p id="a1" class="control">
-                <a class="box true">
-                  Spring break, Miami - cliché, we know
-                </a>
-              </p>
-              <p id="a2" class="control">
-                <a class="box false">
-                  At Columbia University, obviously
-                </a>
-              </p>
-              <p id="a3" class="control">
-                <a class="box false">
-                  Through a friend who set them up - Hi, Friend! You know who you are ;)
-                </a>
-              </p>
-              <p id="a4" class="control">
-                <a class="box false">
-                  In the one Anthropology class Keshal took while at Columbia. It was called "Magic, Witchcraft and Religion". He thought it
-                  "sounded cool".
-                </a>
-              </p>
+      <div class="container">
+        <div class="columns is-multiline">
+          <div id="couple-20" class="column is-4 is-offset-1">
+            <p class="title is-2 ">
+              <span class="rsvp-label">Take the Quiz</span>
+            </p>
+            <p class="subtitle is-4">We could tell you our story...
+              <br>or we could see how well you know it!</p>
+          </div>
+          <div id="couple-2" class="column is-6">
+            <div class="box box-outer">
+              <div id="question" class="field">
+                <strong>Question 1/9</strong>
+                <label id="real-question" class="label is-size-5">Where did Maya and Keshal meet? </label>
+              </div>
+              <progress id="progress" class="progress is-link is-small" value="0" max="100">0%</progress>
+              <div class="field">
+                <p id="a5" class="control"></p>
+                <p id="a1" class="control">
+                  <a class="box true">
+                    Spring break, Miami - cliché, we know
+                  </a>
+                </p>
+                <p id="a2" class="control">
+                  <a class="box false">
+                    At Columbia University, obviously
+                  </a>
+                </p>
+                <p id="a3" class="control">
+                  <a class="box false">
+                    Through a friend who set them up - Hi, Friend! You know who you are ;)
+                  </a>
+                </p>
+                <p id="a4" class="control">
+                  <a class="box false">
+                    In the one Anthropology class Keshal took while at Columbia. It was called "Magic, Witchcraft and Religion". He thought it
+                    "sounded cool".
+                  </a>
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -141,14 +143,14 @@
           in the same time zone! The next three and a half years were filled with long bus rides, packed weekends, and dread-filled
           Sundays when one or the other got on a bus to head back home.
           <br class="is-hidden-touch">
-          <br class="is-hidden-touch">
-          <br class="is-hidden-touch">
-          <br class="is-hidden-touch">
+          <br class="is-hidden-mobile">
+          <br class="is-hidden-mobile">
+          <br class="is-hidden-mobile">
         </p>
       </div>
 
       <div id="couple-3" class="column is-10 is-offset-1">
-        <img src="images/proposal.gif" alt="proposal" width="100%">
+        <img id="proposal" src="images/proposal.gif" alt="proposal" width="100%">
       </div>
       <p class="is-hidden-tablet" style="line-height:0px;margin:-42px;">
         <br>
@@ -162,7 +164,10 @@
           restaurant. Suffice it to say, she cried. A LOT.
         </p>
       </div>
-      <p class="is-hidden-tablet" style="line-height:0px;margin:-70px;">
+      <div id="couple-3" class="column is-10 is-offset-1 is-hidden-tablet">
+          <img id="proposal" src="images/proposal-2.gif" alt="proposal" width="100%">
+        </div>
+      <p class="is-hidden-tablet" style="line-height:0px;margin:-35px;">
         <br>
       </p>
       <div id="couple-8" class="column column-couple-text is-5">
@@ -171,14 +176,14 @@
           that Maya named and Keshal nurtures (Rupert, Chaco, Clemence, Esmerelda and Earl).
           <br/>
         </p>
-        <strong class="is-size-5 is-hidden-tablet">
+        <strong class="is-size-5 is-hidden-desktop">
           <br>That's just the first few chapters of the story, folks. Join them in Kalutara for the next!
           <br>
           <br>
           <br>
         </strong>
       </div>
-      <div id="couple-9" class="column is-10 is-offset-1 is-hidden-mobile">
+      <div id="couple-9" class="column is-10 is-offset-1 is-hidden-touch">
         <p class="thin">
           <strong>
             <center>
