Google analytics added

--- a/src/couple.html
+++ b/src/couple.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-117162422-1');
+  </script>
+
 
   <title>M&K - The Couple</title>
 
@@ -165,8 +175,8 @@
         </p>
       </div>
       <div id="couple-3" class="column is-10 is-offset-1 is-hidden-tablet">
-          <img id="proposal" src="images/proposal-2.gif" alt="proposal" width="100%">
-        </div>
+        <img id="proposal" src="images/proposal-2.gif" alt="proposal" width="100%">
+      </div>
       <p class="is-hidden-tablet" style="line-height:0px;margin:-35px;">
         <br>
       </p>
