--- a/src/faq.html
+++ b/src/faq.html
@@ -2,6 +2,17 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-117162422-1');
+  </script>
+
+
 
   <title>M&K - FAQs</title>
 
@@ -102,7 +113,8 @@
           <strong class="faq-questions">Where can I hire a car/shuttle/bus & driver to travel around Sri Lanka before/after the wedding? </strong>
           </br>
           <p class="faq-text">
-              Please reach out to <a href="mailto:kairosweddings@gmail.com">kairosweddings@gmail.com</a> and they can put you in touch with local car shuttle companies.</p>
+            Please reach out to
+            <a href="mailto:kairosweddings@gmail.com">kairosweddings@gmail.com</a> and they can put you in touch with local car shuttle companies.</p>
           </br>
 
           <strong class="faq-questions">Do you have a registry? </strong>
