--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,17 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-117162422-1');
+  </script>
+
+
 
   <title>Maya & Keshal</title>
 
