Minor content updates

--- a/src/faq.html
+++ b/src/faq.html
@@ -141,6 +141,12 @@
             <a href="https://www.kalkifashion.com" target="_blank">kalkifashion.com</a>
           </p>
           <br>
+          <strong class="faq-questions">Can I use credit card points to buy plane tickets? </strong>
+          </br>
+          <p class="faq-text">
+            <a href="http://www.awardhunt.com/" target="_blank">This website</a> tells you where you can get to with different credit cards. We can't promise it will help, but maybe you'll
+            find a deal!</p>
+          </br>
           <br>
           <br>
           <div class="is-size-7">
