--- a/src/schedule.html
+++ b/src/schedule.html
@@ -120,7 +120,7 @@
           </p>
           <div class="tags">
             <span class="tag is-medium ">6pm onwards</span>
-            <span class="tag is-medium ">Avani Lawns</span>
+            <span class="tag is-medium ">Anantara Lobby Lawn</span>
             <span class="tag is-medium ">Colorful, festive attire</span>
           </div>
         </div>
@@ -168,7 +168,7 @@
           </p>
           <div class="tags">
             <span class="tag is-medium ">8pm onwards</span>
-            <span class="tag is-medium ">Anantara Lobby Lawn</span>
+            <span class="tag is-medium ">Anantara Ballroom</span>
             <span class="tag is-medium ">Dress to impress</span>
           </div>
         </div>
