Updated itinerary link on FAQ page

--- a/src/faq.html
+++ b/src/faq.html
@@ -106,8 +106,9 @@
           </br>
           <p class="faq-text">
             We've written a
-            <a href="https://drive.google.com/uc?export=view&id=1Sr8nVw5MMymwQrUkGw5JDueyDpIuIm0T" target="_blank">quick guide</a>, check it out!
-          </p>
+            <a href="https://drive.google.com/uc?export=view&id=1Sr8nVw5MMymwQrUkGw5JDueyDpIuIm0T" target="_blank">quick guide</a>, check it out!  We also found this
+            <a href="https://www.nicobar.com/guide-sri-lanka-journey/"
+              target="_blank">website</a> that's super helpful.</p>
           </br>
 
           <strong class="faq-questions">Where can I hire a car/shuttle/bus & driver to travel around Sri Lanka before/after the wedding? </strong>
