Added registry modal link in navbar

--- a/src/couple.html
+++ b/src/couple.html
@@ -42,6 +42,16 @@
 
 
 <body>
+  <div id="registry-modal" class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-content animated bounceIn">
+      <div class="notification is-link">
+        <button id="modal-close" class="delete"></button>
+        Your presence is present enough. Seriously. But for the stubborn among you, we simply ask that you don't bring boxed gifts
+        since we will be so far from home!
+      </div>
+    </div>
+  </div>
   <nav id="global-nav" class="navbar is-fixed-top is-transparent">
     <div class="container">
       <div class="navbar-brand">
@@ -67,6 +77,9 @@
           </a>
           <a class="navbar-item" href="rsvp.html">
             <strong>RSVP</strong>
+          </a>
+          <a class="navbar-item" id="registry-click">
+            <strong>Registry</strong>
           </a>
           <a class="navbar-item" href="faq.html">
             <strong>FAQs</strong>
@@ -134,10 +147,10 @@
           <strong class="rsvp-label">The Story</strong>
         </h1>
         </br>
-        <p class="thin"> Maya and Keshal did, in fact, meet in Miami over spring break. They were there separately, but met through a common
-          friend (Hey, Swati!). Back at Barnard/Columbia, while Keshal was courting Maya, he would dutifully walk her back
-          to Plimpton on 121st and Amsterdam, claiming that it wasn't safe for her to walk that way by herself. That abruptly
-          stopped the moment she agreed to date him :/
+        <p class="thin"> Maya and Keshal did, in fact, meet in Miami over spring break. They were there separately, but met
+          through a common friend (Hey, Swati!). Back at Barnard/Columbia, while Keshal was courting Maya, he would dutifully
+          walk her back to Plimpton on 121st and Amsterdam, claiming that it wasn't safe for her to walk that way by herself.
+          That abruptly stopped the moment she agreed to date him :/
         </p>
       </div>
       <p class="is-hidden-tablet" style="line-height:0px;margin:-70px;">
@@ -146,8 +159,9 @@
       <div id="couple-5" class="column column-couple-text is-5">
         <br class="is-hidden-touch">
         <br class="is-hidden-touch">
-        <p class="thin"> After college, Maya moved back to India. Keshal stayed in NYC. They did looooong distance for 2 loooong years. That
-          was hard. But they saw each other once a year on trips they took together to Spain, Croatia and Serbia.
+        <p class="thin"> After college, Maya moved back to India. Keshal stayed in NYC. They did looooong distance for 2
+          loooong years. That was hard. But they saw each other once a year on trips they took together to Spain, Croatia
+          and Serbia.
           <br/></br>
           In 2013, Maya moved to Boston for Business School. They were still in a long distance relationship, but at least they were
           in the same time zone! The next three and a half years were filled with long bus rides, packed weekends, and dread-filled
@@ -166,8 +180,8 @@
         <br>
       </p>
       <div id="couple-7" class="column column-couple-text is-5 is-offset-1">
-        <p class="thin"> In February, 2017, Keshal moved to Boston, putting an end to 5 years of long distance. Now, Sundays mean fresh brewed
-          coffee, decadent homemade breakfasts and Otis Redding on the record player. </br>
+        <p class="thin"> In February, 2017, Keshal moved to Boston, putting an end to 5 years of long distance. Now, Sundays
+          mean fresh brewed coffee, decadent homemade breakfasts and Otis Redding on the record player. </br>
           </br>
           Last June, the two took a trip to Portugal, where Keshal proposed on a lookout point over a beach. Maya was surprised, but
           not as surprised as when they went to dinner that night and found both their parents and siblings sitting at the
@@ -181,9 +195,9 @@
         <br>
       </p>
       <div id="couple-8" class="column column-couple-text is-5">
-        <p class="thin"> The two have since built a life together with all the trappings of millennial domesticity - a Slack channel where
-          they decide what to make for dinner on weeknights, a cast iron pan that Keshal lovingly seasons, and a plant family
-          that Maya named and Keshal nurtures (Rupert, Chaco, Clemence, Esmerelda and Earl).
+        <p class="thin"> The two have since built a life together with all the trappings of millennial domesticity - a Slack
+          channel where they decide what to make for dinner on weeknights, a cast iron pan that Keshal lovingly seasons,
+          and a plant family that Maya named and Keshal nurtures (Rupert, Chaco, Clemence, Esmerelda and Earl).
           <br/>
         </p>
         <strong class="is-size-5 is-hidden-desktop">
@@ -197,7 +211,8 @@
         <p class="thin">
           <strong>
             <center>
-              <span class="tag is-size-5">That's just the first few chapters of the story, folks. Join them in Kalutara for the next!</span>
+              <span class="tag is-size-5">That's just the first few chapters of the story, folks. Join them in Kalutara for
+                the next!</span>
             </center>
             <br>
           </strong>
