--- a/src/faq.html
+++ b/src/faq.html
@@ -43,6 +43,16 @@
 
 
 <body>
+  <div id="registry-modal" class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-content animated bounceIn">
+      <div class="notification is-link">
+        <button id="modal-close" class="delete"></button>
+        Your presence is present enough. Seriously. But for the stubborn among you, we simply ask that you don't bring boxed gifts
+        since we will be so far from home!
+      </div>
+    </div>
+  </div>
   <nav id="global-nav" class="navbar is-fixed-top is-transparent">
     <div class="container">
       <div class="navbar-brand">
@@ -68,6 +78,9 @@
           </a>
           <a class="navbar-item" href="rsvp.html">
             <strong>RSVP</strong>
+          </a>
+          <a class="navbar-item" id="registry-click">
+            <strong>Registry</strong>
           </a>
           <a class="navbar-item is-active" href="faq.html">
             <strong class="tag is-size-6 is-link">FAQs</strong>
@@ -102,27 +115,24 @@
           </br>
 
 
-          <strong class="faq-questions">I'd like to travel around Sri Lanka before/after the wedding. Do you have recommended itineraries? </strong>
+          <strong class="faq-questions">I'd like to travel around Sri Lanka before/after the wedding. Do you have recommended
+            itineraries? </strong>
           </br>
           <p class="faq-text">
             We've written a
-            <a href="https://drive.google.com/uc?export=view&id=1Sr8nVw5MMymwQrUkGw5JDueyDpIuIm0T" target="_blank">quick guide</a>, check it out!  We also found this
-            <a href="https://www.nicobar.com/guide-sri-lanka-journey/"
-              target="_blank">website</a> that's super helpful.</p>
+            <a href="https://drive.google.com/uc?export=view&id=1Sr8nVw5MMymwQrUkGw5JDueyDpIuIm0T" target="_blank">quick
+              guide
+            </a>, check it out! We also found this
+            <a href="https://www.nicobar.com/guide-sri-lanka-journey/" target="_blank">website</a> that's super helpful.</p>
           </br>
 
-          <strong class="faq-questions">Where can I hire a car/shuttle/bus & driver to travel around Sri Lanka before/after the wedding? </strong>
+          <strong class="faq-questions">Where can I hire a car/shuttle/bus & driver to travel around Sri Lanka before/after
+            the wedding? </strong>
           </br>
           <p class="faq-text">
             Please reach out to
-            <a href="mailto:kairosweddings@gmail.com">kairosweddings@gmail.com</a> and they can put you in touch with local car shuttle companies.</p>
-          </br>
-
-          <strong class="faq-questions">Do you have a registry? </strong>
-          </br>
-          <p class="faq-text">
-            Your presence is present enough. Seriously. But for the stubborn among you, we simply ask that you don't bring boxed gifts
-            since we will be so far from home!</p>
+            <a href="mailto:kairosweddings@gmail.com">kairosweddings@gmail.com</a> and they can put you in touch with local
+            car shuttle companies.</p>
           </br>
 
           <strong class="faq-questions">Where can I find Indian clothes? </strong>
@@ -131,11 +141,13 @@
             Beg, borrow, steal! If those don't work, here are a couple online options:
             <br>
             <br>
-            <a href="https://www.indianweddingsaree.com" target="_blank">indianweddingsaree.com</a> - Sells more than just saris and they have readymade sizes you can choose from. But,
-            buyer beware, if the item is surprisingly inexpensive, it will not look as nice as it does in photos.
+            <a href="https://www.indianweddingsaree.com" target="_blank">indianweddingsaree.com</a> - Sells more than just
+            saris and they have readymade sizes you can choose from. But, buyer beware, if the item is surprisingly inexpensive,
+            it will not look as nice as it does in photos.
             <br>
             <br>
-            <a href="http://www.sareesaga.com" target="_blank">sareesaga.com</a> - They do custom sizing and other customizations. Heard good things about this site.
+            <a href="http://www.sareesaga.com" target="_blank">sareesaga.com</a> - They do custom sizing and other customizations.
+            Heard good things about this site.
             <br>
             <br> Other options:
             <a href="https://www.cbazaar.com" target="_blank">cbazaar.com</a>,
@@ -145,8 +157,8 @@
           <strong class="faq-questions">Can I use credit card points to buy plane tickets? </strong>
           </br>
           <p class="faq-text">
-            <a href="http://www.awardhunt.com/" target="_blank">This website</a> tells you where you can get to with different credit cards. We can't promise it will help, but maybe you'll
-            find a deal!</p>
+            <a href="http://www.awardhunt.com/" target="_blank">This website</a> tells you where you can get to with different
+            credit cards. We can't promise it will help, but maybe you'll find a deal!</p>
           </br>
           <br>
           <br>
