--- a/src/rsvp.html
+++ b/src/rsvp.html
@@ -43,6 +43,16 @@
 
 
 <body>
+  <div id="registry-modal" class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-content animated bounceIn">
+      <div class="notification is-link">
+        <button id="modal-close" class="delete"></button>
+        Your presence is present enough. Seriously. But for the stubborn among you, we simply ask that you don't bring boxed gifts
+        since we will be so far from home!
+      </div>
+    </div>
+  </div>
   <nav id="global-nav" class="navbar is-fixed-top is-transparent">
     <div class="container">
       <div class="navbar-brand">
@@ -68,6 +78,9 @@
           </a>
           <a class="navbar-item is-active" href="rsvp.html">
             <strong class="tag is-size-6 is-link">RSVP</strong>
+          </a>
+          <a class="navbar-item" id="registry-click">
+            <strong>Registry</strong>
           </a>
           <a class="navbar-item" href="faq.html">
             <strong>FAQs</strong>
