--- a/src/schedule.html
+++ b/src/schedule.html
@@ -43,6 +43,16 @@
 
 
 <body>
+  <div id="registry-modal" class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-content animated bounceIn">
+      <div class="notification is-link">
+        <button id="modal-close" class="delete"></button>
+        Your presence is present enough. Seriously. But for the stubborn among you, we simply ask that you don't bring boxed gifts
+        since we will be so far from home!
+      </div>
+    </div>
+  </div>
   <nav id="global-nav" class="navbar is-fixed-top is-transparent">
     <div class="container">
       <div class="navbar-brand">
@@ -68,6 +78,9 @@
           </a>
           <a class="navbar-item" href="rsvp.html">
             <strong>RSVP</strong>
+          </a>
+          <a class="navbar-item" id="registry-click">
+            <strong>Registry</strong>
           </a>
           <a class="navbar-item" href="faq.html">
             <strong>FAQs</strong>
@@ -139,9 +152,9 @@
           <span class="event-name">
             Baarat + Wedding</br>
           </span>
-          <span class="thin-grey">This tradition signifies the groom traveling to the bride's home, accompanied by his family. For all you groomsmen,
-            this is your chance to dance like nobody's watching (even though everybody's watching). The bride and groom will
-            then marry at sunset on a jetty by the lagoon, overlooking a mosque, a stupa and a church.</br>
+          <span class="thin-grey">This tradition signifies the groom traveling to the bride's home, accompanied by his family.
+            For all you groomsmen, this is your chance to dance like nobody's watching (even though everybody's watching).
+            The bride and groom will then marry at sunset on a jetty by the lagoon, overlooking a mosque, a stupa and a church.</br>
           </span>
           <p style="line-height:0px;margin:-7px;">
             <br>
@@ -160,8 +173,8 @@
           <span class="event-name">
             Reception</br>
           </span>
-          <span class="thin-grey">Take a break after the wedding, and meet us back at the front lawn of the Anantara for dinner, drinks, and you
-            guessed it... more dancing! </br>
+          <span class="thin-grey">Take a break after the wedding, and meet us back at the front lawn of the Anantara for
+            dinner, drinks, and you guessed it... more dancing! </br>
           </span>
           <p style="line-height:0px;margin:-7px;">
             <br>
