--- a/src/travel.html
+++ b/src/travel.html
@@ -42,6 +42,16 @@
 
 
 <body>
+  <div id="registry-modal" class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-content animated bounceIn">
+      <div class="notification is-link">
+        <button id="modal-close" class="delete"></button>
+        Your presence is present enough. Seriously. But for the stubborn among you, we simply ask that you don't bring boxed gifts
+        since we will be so far from home!
+      </div>
+    </div>
+  </div>
   <nav id="global-nav" class="navbar is-fixed-top is-transparent">
     <div class="container">
       <div class="navbar-brand">
@@ -68,6 +78,9 @@
           <a class="navbar-item" href="rsvp.html">
             <strong>RSVP</strong>
           </a>
+          <a class="navbar-item" id="registry-click">
+            <strong>Registry</strong>
+          </a>
           <a class="navbar-item" href="faq.html">
             <strong>FAQs</strong>
           </a>
@@ -91,13 +104,13 @@
           <strong>Anantara Resort</strong>
           </br>
           All our events will be taking place at the
-          <a href="https://kalutara.anantara.com" target="_blank">Anantara Kalutara</a> and that’s where you’ll be staying as well. We're very excited about the place and would
-          love to tell you a little about it:
+          <a href="https://kalutara.anantara.com" target="_blank">Anantara Kalutara</a> and that’s where you’ll be staying
+          as well. We're very excited about the place and would love to tell you a little about it:
           <br>
-          <br> The Anantara Kalutara is a Geoffrey Bawa property. Who is Geoffrey Bawa you ask? He was an iconic Sri Lankan architect
-          known for this signature "Tropical Modernism" style, defined by sunlit, breezy structures that meld into their
-          natural surroundings. At the Anantara Kalutara, that means a lagoon on one side of the hotel and an ocean on the
-          other. The resort has beach access as well as 2 pools.
+          <br> The Anantara Kalutara is a Geoffrey Bawa property. Who is Geoffrey Bawa you ask? He was an iconic Sri Lankan
+          architect known for this signature "Tropical Modernism" style, defined by sunlit, breezy structures that meld into
+          their natural surroundings. At the Anantara Kalutara, that means a lagoon on one side of the hotel and an ocean
+          on the other. The resort has beach access as well as 2 pools.
           <br>
           <br>
           <div class="map-responsive">
@@ -115,13 +128,13 @@
           <strong>Anantara Resort</strong>
           </br>
           All our events will be taking place at the
-          <a href="https://kalutara.anantara.com" target="_blank">Anantara Kalutara</a> and that’s where you’ll be staying as well. We're very excited about the place and would
-          love to tell you a little about it:
+          <a href="https://kalutara.anantara.com" target="_blank">Anantara Kalutara</a> and that’s where you’ll be staying
+          as well. We're very excited about the place and would love to tell you a little about it:
           </br>
-          </br>The Anantara Kalutara is a Geoffrey Bawa property. Who is Geoffrey Bawa you ask? He was an iconic Sri Lankan architect
-          known for this signature "Tropical Modernism" style, defined by sunlit, breezy structures that meld into their
-          natural surroundings. At the Anantara Kalutara, that means a lagoon on one side of the hotel and an ocean on the
-          other. The resort has beach access as well as 2 pools.
+          </br>The Anantara Kalutara is a Geoffrey Bawa property. Who is Geoffrey Bawa you ask? He was an iconic Sri Lankan
+          architect known for this signature "Tropical Modernism" style, defined by sunlit, breezy structures that meld into
+          their natural surroundings. At the Anantara Kalutara, that means a lagoon on one side of the hotel and an ocean
+          on the other. The resort has beach access as well as 2 pools.
           <br>
           <br>
           <div class="map-responsive">
@@ -146,7 +159,8 @@
           <strong>Visas</strong>
           </br>
           Good news! It's super easy to get a short stay visa for Sri Lanka. Simply fill out
-          <a href="https://www.eta.gov.lk/slvisa/visainfo/center.jsp?locale=en_US#" target="_blank">this form</a>. You should receive an approval within 24-48 hours. Be sure to print that out and bring it with you!
+          <a href="https://www.eta.gov.lk/slvisa/visainfo/center.jsp?locale=en_US#" target="_blank">this form</a>. You should
+          receive an approval within 24-48 hours. Be sure to print that out and bring it with you!
           </br>
           </br>
           <strong> Arriving in Sri Lanka</strong>
@@ -169,7 +183,8 @@
           <strong>Visas</strong>
           </br>
           Good news! It's super easy to get a short stay visa for Sri Lanka. Simply fill out
-          <a href="https://www.eta.gov.lk/slvisa/visainfo/center.jsp?locale=en_US#" target="_blank">this form</a>. You should receive an approval within 24-48 hours. Be sure to print that out and bring it with you!
+          <a href="https://www.eta.gov.lk/slvisa/visainfo/center.jsp?locale=en_US#" target="_blank">this form</a>. You should
+          receive an approval within 24-48 hours. Be sure to print that out and bring it with you!
           </br>
           </br>
           <strong> Arriving in Sri Lanka</strong>
