Changed Sangeet to Mehendi + Sangeet

--- a/src/schedule.html
+++ b/src/schedule.html
@@ -120,7 +120,7 @@
             <br>
           </div>
           <span class="event-name">
-            Sangeet </br>
+            Mehendi + Sangeet </br>
           </span>
           <span class="thin-grey">The Sanskrit word
             <i>sangeet</i> roughly translates to "sung together". Traditionally, this ceremony was meant for the female guests
