--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,14 @@
 
 
 
-  <title>Maya & Keshal</title>
+  <title>Aditi & Mayank</title>
 
   <meta charset="utf-8">
-  <meta property="og:title" content="Maya & Keshal" />
+  <meta property="og:title" content="Aditi & Mayank" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://mayaandkeshal.com" />
   <meta property="og:description" content="The wedding of Maya and Keshal" />
-  <meta property="og:image" content="http://mayaandkeshal.com/images/c-3-color.jpg" />
+  <meta property="og:image" content="" />
   <meta property="fb:admins" content="prit4k" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -49,7 +49,7 @@
       <div class="notification is-link">
         <button id="modal-close" class="delete"></button>
         Your presence is present enough. Seriously. But for the stubborn among you, we simply ask that you don't bring boxed gifts
-        since we will be so far from home!
+        since we will be so far from home! Hope that's cool :)
       </div>
     </div>
   </div>
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="navbar-brand">
         <a id="logo" class="navbar-item" href="index.html">
-          <strong class="logo">Maya & Keshal</strong>
+          <strong class="logo">Aditi and Mayank</strong>
         </a>
         <div id="nav-toggle" class="navbar-burger">
           <span></span>
@@ -90,8 +90,23 @@
     </div>
   </nav>
 
-  <section id="main" class="hero is-fullheight animated fadeIn">
-  </section>
+  <div id="main" class="hero is-fullheight animated fadeIn">
+    <div id ="main-container">
+      <div id="aditi-and-mayank">
+        	
+        <link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+        <br> Aditi & Mayank</br>
+        <div id="date-and-location">
+          <br> May 30, 2020 | Providence, RI, USA</br>
+        </div>
+      </div>
+      <div id = "index_picture">
+        <img src = "./images/index_take2.png"/>
+
+      </div>
+      
+    </div>
+  </div>
 
   <!--<Deject>-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
