--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <title>Aditi & Mayank</title>
 
   <meta charset="utf-8">
-  <meta property="og:title" content="Aditi & Mayank" />
+  <meta property="og:title" content="You are invited" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://mayaandkeshal.com" />
   <meta property="og:description" content="The wedding of Maya and Keshal" />
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="navbar-brand">
         <a id="logo" class="navbar-item" href="index.html">
-          <strong class="logo">Aditi and Mayank</strong>
+          <strong class="logo">You are invited</strong>
         </a>
         <div id="nav-toggle" class="navbar-burger">
           <span></span>
@@ -93,8 +93,9 @@
   <div id="main" class="hero is-fullheight animated fadeIn">
     <div id ="main-container">
       <div id="aditi-and-mayank">
-        	
+        <link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
         <br> Aditi & Mayank</br>
         <div id="date-and-location">
           <br> May 30, 2020 | Providence, RI, USA</br>
