Finalize index.html. Add relevant pictures

--- a/src/index.html
+++ b/src/index.html
@@ -43,21 +43,11 @@
 
 
 <body>
-  <div id="registry-modal" class="modal">
-    <div class="modal-background"></div>
-    <div class="modal-content animated bounceIn">
-      <div class="notification is-link">
-        <button id="modal-close" class="delete"></button>
-        Your presence is present enough. Seriously. But for the stubborn among you, we simply ask that you don't bring boxed gifts
-        since we will be so far from home! Hope that's cool :)
-      </div>
-    </div>
-  </div>
   <nav id="global-nav" class="navbar is-fixed-top is-transparent animated slideInDown">
     <div class="container">
       <div class="navbar-brand">
-        <a id="logo" class="navbar-item" href="index.html">
-          <strong class="logo">You are invited</strong>
+        <a id="logo" class="navbar-item" href="index.html" :hover>
+          <strong class="logo">You are invited!</strong>
         </a>
         <div id="nav-toggle" class="navbar-burger">
           <span></span>
@@ -67,22 +57,19 @@
       </div>
       <div id="main-menu" class="navbar-menu">
         <div class="navbar-end">
-          <a class="navbar-item" href="couple.html">
+          <a class="menu-items" href="couple.html">
             <strong>The Couple</strong>
           </a>
-          <a class="navbar-item" href="schedule.html">
+          <a class="menu-items" href="schedule.html">
             <strong>Schedule</strong>
           </a>
-          <a class="navbar-item" href="travel.html">
-            <strong>Travel & Accomodations</strong>
-          </a>
-          <a class="navbar-item" href="rsvp.html">
+          <a class="menu-items" href="rsvp.html">
             <strong>RSVP</strong>
           </a>
-          <a class="navbar-item" id="registry-click">
+          <a class="menu-items" href="registry.html">
             <strong>Registry</strong>
           </a>
-          <a class="navbar-item" href="faq.html">
+          <a class="menu-items" href="faq.html">
             <strong>FAQs</strong>
           </a>
         </div>
