--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,19 @@
 
 
 
-  <title>Aditi & Mayank</title>
+  <title>You are invited</title>
 
   <meta charset="utf-8">
   <meta property="og:title" content="You are invited" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://mayaandkeshal.com" />
-  <meta property="og:description" content="The wedding of Maya and Keshal" />
+  <meta property="og:url" content="http://aditiandmayank.com" />
+  <meta property="og:description" content="Wedding website of Aditi and Mayank" />
   <meta property="og:image" content="" />
-  <meta property="fb:admins" content="prit4k" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta name="description" content="The wedding of Maya and Keshal" />
-  <meta name="keywords" content="Wedding, Indian, Sri Lanka, India, Marriage, Wife, Husband">
-  <meta name="author" content="Pritak Patel">
+  <meta name="description" content="Wedding website of Aditi and Mayank" />
+  <meta name="keywords" content="Wedding, Indian, Simple Indian Wedding, India, Wedding website, Indian Wedding website">
+  <meta name="author" content="Aditi Gupta and Mayank Agrawal">
 
 
   <!--[htmlclean-protect]-->
@@ -38,6 +37,9 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/animate.css">
+  <link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
   <!--</Deject>-->
 </head>
 
@@ -80,9 +82,7 @@
   <div id="main" class="hero is-fullheight animated fadeIn">
     <div id ="main-container">
       <div id="aditi-and-mayank">
-        <link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+        
         <br> Aditi & Mayank</br>
         <div id="date-and-location">
           <br> May 30, 2020 | Providence, RI, USA</br>
